[gd_scene load_steps=9 format=3 uid="uid://cwvmsqurkf8aa"]

[ext_resource type="PackedScene" uid="uid://dn8gun8srd127" path="res://observer/observer.tscn" id="1"]
[ext_resource type="Script" uid="uid://dd3sqwlvyiip3" path="res://control.gd" id="2"]

[sub_resource type="Gradient" id="Gradient_oauk4"]
colors = PackedColorArray(0.862745, 0.862745, 0.862745, 1, 1, 1, 1, 1)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_bkayj"]
noise_type = 0
frequency = 1.0

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_t6ofl"]
seamless = true
color_ramp = SubResource("Gradient_oauk4")
noise = SubResource("FastNoiseLite_bkayj")

[sub_resource type="StandardMaterial3D" id="1"]
transparency = 1
albedo_color = Color(0.301961, 0.623529, 0.862745, 0.752941)
albedo_texture = SubResource("NoiseTexture2D_t6ofl")
uv1_scale = Vector3(3, 2, 1)
texture_filter = 5

[sub_resource type="BoxMesh" id="2"]
material = SubResource("1")
size = Vector3(5, 5, 5)

[sub_resource type="BoxMesh" id="BoxMesh_3qo5i"]

[node name="WindowManagement" type="Node3D"]

[node name="Observer" parent="." instance=ExtResource("1")]
transform = Transform3D(0.910685, 0, -0.4131, 0, 1, 0, 0.4131, 0, 0.910685, -4.81287, -0.152566, 9.90641)

[node name="TestCube" type="MeshInstance3D" parent="."]
mesh = SubResource("2")

[node name="TestCube2" type="MeshInstance3D" parent="."]
mesh = SubResource("BoxMesh_3qo5i")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 2
size_flags_vertical = 2
script = ExtResource("2")

[node name="Buttons" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = 335.0
offset_bottom = -2.0
grow_vertical = 2
theme_override_constants/separation = 5
metadata/_edit_layout_mode = 0
metadata/_edit_use_custom_anchors = false

[node name="Button_Fullscreen" type="Button" parent="Control/Buttons"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 2
toggle_mode = true
text = "Fullscreen"
metadata/_edit_layout_mode = 0
metadata/_edit_use_custom_anchors = false

[node name="Button_FixedSize" type="Button" parent="Control/Buttons"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 2
toggle_mode = true
text = "Fixed Size"
metadata/_edit_layout_mode = 0
metadata/_edit_use_custom_anchors = false

[node name="Button_Minimized" type="Button" parent="Control/Buttons"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 2
toggle_mode = true
text = "Minimized"
metadata/_edit_layout_mode = 0
metadata/_edit_use_custom_anchors = false

[node name="Button_Maximized" type="Button" parent="Control/Buttons"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 2
toggle_mode = true
text = "Maximized"
metadata/_edit_layout_mode = 0
metadata/_edit_use_custom_anchors = false

[node name="Button_MoveTo" type="Button" parent="Control/Buttons"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 2
text = "Move To"
metadata/_edit_layout_mode = 0
metadata/_edit_use_custom_anchors = false

[node name="Button_Resize" type="Button" parent="Control/Buttons"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 2
text = "Resize"
metadata/_edit_layout_mode = 0
metadata/_edit_use_custom_anchors = false

[node name="Button_Screen0" type="Button" parent="Control/Buttons"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 2
text = "Screen0"
metadata/_edit_layout_mode = 0
metadata/_edit_use_custom_anchors = false

[node name="Button_Screen1" type="Button" parent="Control/Buttons"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 2
text = "Screen1"
metadata/_edit_layout_mode = 0
metadata/_edit_use_custom_anchors = false

[node name="Label_MouseModes" type="Label" parent="Control/Buttons"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 0
text = "MouseModes:"
metadata/_edit_layout_mode = 1
metadata/_edit_use_custom_anchors = false

[node name="Button_MouseModeVisible" type="Button" parent="Control/Buttons"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 2
toggle_mode = true
text = "[F1] MOUSE_MODE_VISIBLE"
metadata/_edit_layout_mode = 1
metadata/_edit_use_custom_anchors = false

[node name="Button_MouseModeHidden" type="Button" parent="Control/Buttons"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 2
toggle_mode = true
text = "[F2] MOUSE_MODE_HIDDEN"
metadata/_edit_layout_mode = 1
metadata/_edit_use_custom_anchors = false

[node name="Button_MouseModeCaptured" type="Button" parent="Control/Buttons"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 2
toggle_mode = true
text = "[F3] MOUSE_MODE_CAPTURED"
metadata/_edit_layout_mode = 1
metadata/_edit_use_custom_anchors = false

[node name="Button_MouseModeConfined" type="Button" parent="Control/Buttons"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 2
toggle_mode = true
text = "[F4] MOUSE_MODE_CONFINED"
metadata/_edit_layout_mode = 1
metadata/_edit_use_custom_anchors = false

[node name="Button_MouseModeConfinedHidden" type="Button" parent="Control/Buttons"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 2
toggle_mode = true
text = "[F5] MOUSE_MODE_CONFINED_HIDDEN"
metadata/_edit_layout_mode = 1
metadata/_edit_use_custom_anchors = false

[node name="Label_MouseModeCaptured_KeyInfo" type="Label" parent="Control/Buttons"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 0
text = "ESC: Deactivate MOUSE_MODE_CAPTURED
W, S: Move forward, backward
A, D: Strafe left, right"
metadata/_edit_layout_mode = 1
metadata/_edit_use_custom_anchors = false

[node name="Labels" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -241.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/separation = 10
metadata/_edit_layout_mode = 1
metadata/_edit_use_custom_anchors = false

[node name="Label_Mode" type="Label" parent="Control/Labels"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Mode:"
metadata/_edit_layout_mode = 1
metadata/_edit_use_custom_anchors = false

[node name="Label_Position" type="Label" parent="Control/Labels"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Position:"
metadata/_edit_layout_mode = 1
metadata/_edit_use_custom_anchors = false

[node name="Label_Size" type="Label" parent="Control/Labels"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Size:"
metadata/_edit_layout_mode = 1
metadata/_edit_use_custom_anchors = false

[node name="Label_MousePosition" type="Label" parent="Control/Labels"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Mouse Position:"
metadata/_edit_layout_mode = 1
metadata/_edit_use_custom_anchors = false

[node name="Label_Screen_Count" type="Label" parent="Control/Labels"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Screen_Count:"
metadata/_edit_layout_mode = 1
metadata/_edit_use_custom_anchors = false

[node name="Label_Screen_Current" type="Label" parent="Control/Labels"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Screen:"
metadata/_edit_layout_mode = 1
metadata/_edit_use_custom_anchors = false

[node name="Label_Screen0_Resolution" type="Label" parent="Control/Labels"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Screen0 Resolution: "
metadata/_edit_layout_mode = 1
metadata/_edit_use_custom_anchors = false

[node name="Label_Screen0_Position" type="Label" parent="Control/Labels"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Screen0 Position: "
metadata/_edit_layout_mode = 1
metadata/_edit_use_custom_anchors = false

[node name="Label_Screen0_DPI" type="Label" parent="Control/Labels"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Screen0 DPI:"
metadata/_edit_layout_mode = 1
metadata/_edit_use_custom_anchors = false

[node name="Label_Screen0_RefreshRate" type="Label" parent="Control/Labels"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Screen0 Refresh Rate:"
metadata/_edit_layout_mode = 1
metadata/_edit_use_custom_anchors = false

[node name="Label_Screen1_Resolution" type="Label" parent="Control/Labels"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Screen1 Resolution: "
metadata/_edit_layout_mode = 1
metadata/_edit_use_custom_anchors = false

[node name="Label_Screen1_Position" type="Label" parent="Control/Labels"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Screen1 Position: "
metadata/_edit_layout_mode = 1
metadata/_edit_use_custom_anchors = false

[node name="Label_Screen1_DPI" type="Label" parent="Control/Labels"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Screen1 DPI:"
metadata/_edit_layout_mode = 1
metadata/_edit_use_custom_anchors = false

[node name="Label_Screen1_RefreshRate" type="Label" parent="Control/Labels"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Screen1 Refresh Rate:"
metadata/_edit_layout_mode = 1
metadata/_edit_use_custom_anchors = false

[node name="ImplementationDialog" type="AcceptDialog" parent="Control"]
size = Vector2i(470, 213)

[node name="Text" type="Label" parent="Control/ImplementationDialog"]
offset_left = 8.0
offset_top = 8.0
offset_right = 462.0
offset_bottom = 164.0
size_flags_horizontal = 2
size_flags_vertical = 0
text = "This is an Implementation-Test-Demo

It is used to help implementing a new window handling api
across platforms.

Your platform lacks at the moment the following methods:
"

[node name="CheckButton" type="CheckButton" parent="Control"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -160.0
offset_top = -47.0
offset_right = -16.0
offset_bottom = -16.0
grow_horizontal = 0
grow_vertical = 0
text = "Transparent"

[connection signal="pressed" from="Control/Buttons/Button_Fullscreen" to="Control" method="_on_button_fullscreen_pressed"]
[connection signal="pressed" from="Control/Buttons/Button_FixedSize" to="Control" method="_on_button_fixed_size_pressed"]
[connection signal="pressed" from="Control/Buttons/Button_Minimized" to="Control" method="_on_button_minimized_pressed"]
[connection signal="pressed" from="Control/Buttons/Button_Maximized" to="Control" method="_on_button_maximized_pressed"]
[connection signal="pressed" from="Control/Buttons/Button_MoveTo" to="Control" method="_on_button_move_to_pressed"]
[connection signal="pressed" from="Control/Buttons/Button_Resize" to="Control" method="_on_button_resize_pressed"]
[connection signal="pressed" from="Control/Buttons/Button_Screen0" to="Control" method="_on_button_screen_0_pressed"]
[connection signal="pressed" from="Control/Buttons/Button_Screen1" to="Control" method="_on_button_screen_1_pressed"]
[connection signal="pressed" from="Control/Buttons/Button_MouseModeVisible" to="Control" method="_on_button_mouse_mode_visible_pressed"]
[connection signal="pressed" from="Control/Buttons/Button_MouseModeHidden" to="Control" method="_on_button_mouse_mode_hidden_pressed"]
[connection signal="pressed" from="Control/Buttons/Button_MouseModeCaptured" to="Control" method="_on_button_mouse_mode_captured_pressed"]
[connection signal="pressed" from="Control/Buttons/Button_MouseModeConfined" to="Control" method="_on_button_mouse_mode_confined_pressed"]
[connection signal="pressed" from="Control/Buttons/Button_MouseModeConfinedHidden" to="Control" method="_on_button_mouse_mode_confined_hidden_pressed"]
[connection signal="toggled" from="Control/CheckButton" to="Observer" method="_on_transparent_check_button_toggled"]
